# pyRclone

./: .coveragerc  .pylintrc  .travis.yml  README.md  mypy.ini  pyproject.toml
ci/: ci_test.sh
pyRclone/: Rclone.py  RcloneConfig.py  __init__.py  rclone_config.py
pyrclone/: __init__.py  rclone.py  rclone_config.py
tests/: debug_parser.py
tests/pyrclone_tests/: test_rclone.py
