[tool.poetry]
name = "pyRclone"
version = "0.0.1"
description = "pyRclone"
authors = ["Ryan C <r.cross@lancaster.ac.uk>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^18.3-alpha.0"
mypy = "^0.650.0"
pylint = "^2.2"
pytest = "=4.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
